[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "KratosContactStructuralMechanicsApplication"
    description = "The Contact Structural Mechanics Application contains the contact mechanics implementations that can be used by the Structural Mechanics Application within Kratos Multiphysics."
    
    readme = {"file" = "README.md", "content-type" = "text/markdown"}
    license = {text = "BSD-4-Clause"}
    authors = [
        {name="Vicente Mataix Ferrándiz", email="vmataix@altair.com"}
    ]
    requires-python = ">=3.8"
    dependencies = [
        "KratosMultiphysics=={env:KRATOS_VERSION}",
        "KratosStructuralMechanicsApplication=={env:KRATOS_VERSION}"
    ]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: C++",
        "Topic :: Scientific/Engineering"
    ]
    dynamic = ["version"]

# List of binaries for this application 
# (This is a Kratos build script extension and will not work with python build)
[kratos]
    libs = ["KratosContactStructuralMechanicsApplication.*", "KratosContactStructuralMechanicsCore.*", "libKratosContactStructuralMechanicsCore.*"]

# Wheel (py and stubs)
[tool.hatch.build.targets.wheel]
    include = [
        "KratosMultiphysics/ContactStructuralMechanicsApplication/**/*.py*"
    ]

# # Hook to Build Properties
[tool.hatch.build.targets.wheel.hooks.custom]
    path = "hatch_build.py"

# Wheel (dll, so, binary dependencies)
[tool.hatch.build.targets.wheel.force-include]
    libs = "KratosMultiphysics/.libs"

# Editable (py and stubs)
[tool.hatch.build.targets.editable]
    include = [
        "KratosMultiphysics/ContactStructuralMechanicsApplication/**/*.py*"
    ]

# Editable (dll, so, binary dependencies)
[tool.hatch.build.targets.editable.force-include]
    libs = "KratosMultiphysics/.libs"

# Hook to Metadata
[tool.hatch.metadata.hooks.custom]
    path = "hatch_build.py"
